--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.username= root
+spring.datasource.password=Linhduc13mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/file
 
+
+spring.jpa.hibernate.ddl-auto=update
